# Dosya: Cargo.toml
[package]
name = "sentiric-sip-b2bua-service"
version = "1.6.9"
edition = "2021"

[dependencies]
# Async & gRPC
tokio = { version = "1", features = ["full"] }
tonic = { version = "0.11", features = ["tls", "tls-roots"] }
prost = "0.12"
prost-types = "0.12"
hyper = { version = "0.14", features = ["full"] }
futures = "0.3" # [DÜZELTME]: StreamExt trait'i için eklendi

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "registry"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hostname = "0.3" 
chrono = { version = "0.4", features = ["serde"] }

# Config & Data
dotenvy = "0.15"
anyhow = "1.0"
thiserror = "1.0"
config = "0.14"
uuid = { version = "1.8", features = ["v4"] }
rand = "0.8"
dashmap = "5.5"
lapin = "2.3.1"
redis = { version = "0.26", features = ["tokio-rustls-comp", "connection-manager"] }

# --- THE IRON CORE ---
sentiric-rtp-core = { git = "https://github.com/sentiric/sentiric-rtp-core.git", tag = "v1.6.1" }
sentiric-sip-core = { git = "https://github.com/sentiric/sentiric-sip-core.git", tag = "v1.5.6" }
sentiric-contracts = { git = "https://github.com/sentiric/sentiric-contracts.git", tag = "v1.17.0" }